Filtro version No hay cambios

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="product">
             <a class="itemBox" data-item="pro" nombre="Bento-Page" href="#"><img loading="lazy" src="./images/Bento.png"
                     alt="" href="#"></a>
-            <a class="itemBox" data-item="lan" nombre="Blog" href="#"><img loading="lazy" src="./images/Blog.png"
+            <a class="itemBox" data-item="lan" nombre="Blog" href="#asdasdadas"><img loading="lazy" src="./images/Blog.png"
                     alt=""></a>
             <a class="itemBox" data-item="pro" nombre="Pelicula" href="#"><img loading="lazy"
                     src="./images/Catologo de peliculas.png" alt=""></a>
@@ -35,7 +35,7 @@
                     alt=""></a>
             <a class="itemBox" data-item="pro" nombre="Calculadora" href="#"><img loading="lazy"
                     src="./images/Captura de pantalla 2024-02-07 034210.png" alt=""></a>
-            <a class="itemBox" data-item="pro" nombre="Calculadora" href="#"><img loading="lazy"
+            <a class="itemBox" data-item="pro" nombre="Drag-Drop" href="#"><img loading="lazy"
                     src="./images/Drag-Drop.png" alt=""></a>
 
             <!--Cuando se tenga el otro contenido agregar aqui mismo dentro del div-->
@@ -56,7 +56,7 @@
                     <img src="./images/cream_crazy_icon-icons.com_74936.ico" alt="">
                 </div>
                 <br>
-                <button class="Ver">Visitar El Proyecto</button>
+                <button class="Ver"><a class="lik" href="Linksdfs">Visitar El Proyecto</a></button>
             </span>
 
         </div>
@@ -118,7 +118,7 @@
             previewBox.classList.add("show");
             let selectedName = element.getAttribute("nombre");
             categoryName.textContent = selectedName;
-            let Camino = element.getAttribute("data-item").href;
+            // let Camino = element.getAttribute("data-item").href;
             shadow.classList.add("show");
 
         }
