Error de la url del modal

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         const previewBox = document.querySelector(".preview-box"),
             categoryName = previewBox.querySelector(".title p"),
-            Links = document.querySelector(".itemBox img"),
+            Links = previewBox.querySelector(".projects__buttons img"),
             shadow = document.querySelector(".shadow");
 
 
